made some changes to the modal

--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
                 <p>Fill in the comments...</p>
             </div>
         </div>
-        <button id="modalBtn" class="button"> Click Here</button>
+        <button id="uploadBtn" class="button"> Click Here</button>
         <script src="script.js"></script>
     </body>
 </html>
